# AI-lectures-and-notes

./: # verify_env.py  .env  .env.example  .gitignore  .pre-commit-config.yaml  AUTOMATION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  QUICKSTART.md  README.md  __init__.py  app.py  docker-compose.yml  file_handler.py  health_check.py  index.html  llm_handler.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  update_env_example.py  verify_env.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependency-update.yml
ai_app/: # verify_env.py  CHANGE_LLM.md  Dockerfile  START_HERE.md  TROUBLESHOOTING.md  app.py  requirements.txt  test_api.py
ai_app/src/utils/: __init__.py  llm_handler.py
aiassistant_project/: .env.example  .gitignore  QUICKSTART.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
aiassistant_project/src/utils/: file_handler.py  llm_handler.py
app/: main.py
app/modules/: chatbot.py
tests/: test_file_handler.py  test_llm_handler.py
uploads/resources/: # 🚀 2025 Student Developer Roadmap.txt
video_generation/: main.py
voice_assistant/: main.py
